-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 8-shenandoah, 11-shenandoah, 14, 15
-
Component/s: hotspot
-
b06
-
generic
-
generic
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8240464 | 14.0.2 | Roman Kennke | P4 | Resolved | Fixed | b01 |
We currently only print e.g. "Pause Init Traversal" in event messages for Traversal GC. We should also include information whether or not the cycle also does unload classes and/or process references, like we do for the normal mode.
- backported by
-
JDK-8240464 Shenandoah: More details in Traversal GC event messages
-
- Resolved
-