8236851: Shenandoah: More details in Traversal GC event messages

Reviewed-by: shade